issue with flickering fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Poiret+One&family=Sen&family=Space+Grotesk&display=swap");
 body * {
   margin: 0;
+  //
   font-family: "Sen", sans-serif;
   @media only screen and (max-width: 800px) {
     overflow-x: hidden;
   }
+}
+
+body {
+  background-color: #020024;
 }
 
 // Overall
